# arctic-macon

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: native-tests.yml
docs/: REGISTERS.md
include/: arctic_registers.h  macon_advanced_params.h  macon_faults.h  macon_link.h  macon_registers.h  macon_state.h  tuya_codec.h
src/: arctic_registers.cpp  macon_advanced_params.cpp  macon_faults.cpp  macon_link.cpp  macon_registers.cpp  macon_state.cpp  tuya_codec.cpp
tests/: CMakeLists.txt  test_advanced_params.cpp  test_decode_state.cpp  test_macon_link.cpp  test_tuya_codec.cpp
